--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -67,6 +67,7 @@
     <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Helpers\Enums.cs" />
     <Compile Include="src\Engine\Core\Helpers\Functions.cs" />
+    <Compile Include="src\Engine\Core\SoundEngine.cs" />
     <Compile Include="src\Engine\Core\Starter.cs" />
     <Compile Include="src\Engine\Core\WindowManager.cs" />
     <Compile Include="src\Engine\Debugging\DebugScene.cs" />
