--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -72,12 +72,13 @@
     <Compile Include="src\Engine\Core\WindowManager.cs" />
     <Compile Include="src\Engine\Debugging\DebugScene.cs" />
     <Compile Include="src\Engine\Debugging\Logger.cs" />
-    <Compile Include="src\Engine\Events\ESystem.cs" />
-    <Compile Include="src\Engine\Events\EType.cs" />
-    <Compile Include="src\Engine\Events\Event.cs" />
+    <Compile Include="src\Engine\Events\NetworkMessageEventArgs.cs" />
+    <Compile Include="src\Engine\Events\NetworkEventArgs.cs" />
+    <Compile Include="src\Engine\Events\MouseButtonEventArgs.cs" />
+    <Compile Include="src\Engine\Events\MouseScrollEventArgs.cs" />
+    <Compile Include="src\Engine\Events\MouseMoveEventArgs.cs" />
+    <Compile Include="src\Engine\Events\KeyEventArgs.cs" />
     <Compile Include="src\Engine\Events\SoulUpdateEventArgs.cs" />
-    <Compile Include="src\Engine\Events\SoulEventArgs.cs" />
-    <Compile Include="src\Engine\Events\Listen.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\DrawData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\ColorText.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TextLine.cs" />
