--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -84,6 +84,7 @@
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\ColorText.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TextLine.cs" />
     <Compile Include="src\Engine\Objects\Helpers\GameObject\SmoothStepData.cs" />
+    <Compile Include="src\Engine\Objects\UIComponents\Box.cs" />
     <Compile Include="src\Engine\Objects\UIComponents\Button.cs" />
     <Compile Include="src\Engine\Objects\UIObject.cs" />
     <Compile Include="src\Libraries\External\TiledSharp\ImageLayer.cs" />
