--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -72,13 +72,14 @@
     <Compile Include="src\Engine\Core\WindowManager.cs" />
     <Compile Include="src\Engine\Debugging\DebugScene.cs" />
     <Compile Include="src\Engine\Debugging\Logger.cs" />
-    <Compile Include="src\Engine\Events\NetworkMessageEventArgs.cs" />
-    <Compile Include="src\Engine\Events\NetworkEventArgs.cs" />
-    <Compile Include="src\Engine\Events\MouseButtonEventArgs.cs" />
-    <Compile Include="src\Engine\Events\MouseScrollEventArgs.cs" />
-    <Compile Include="src\Engine\Events\MouseMoveEventArgs.cs" />
-    <Compile Include="src\Engine\Events\KeyEventArgs.cs" />
-    <Compile Include="src\Engine\Events\SoulUpdateEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\NetworkMessageEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\NetworkEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\MouseButtonEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\MouseScrollEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\MouseMoveEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\KeyEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\ScrollbarEventArgs.cs" />
+    <Compile Include="src\Engine\EventArgs\SoulUpdateEventArgs.cs" />
     <Compile Include="src\Engine\Objects\DrawComponent.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\DrawData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\ColorText.cs" />
