--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -35,7 +35,7 @@
     <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
     <DefineConstants>DEBUG;TRACE;LINUX</DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>false</Prefer32Bit>
     <WarningLevel>4</WarningLevel>
@@ -88,6 +88,7 @@
     <Compile Include="src\Engine\Objects\UIComponents\Box.cs" />
     <Compile Include="src\Engine\Objects\UIComponents\Button.cs" />
     <Compile Include="src\Engine\Objects\UIObject.cs" />
+    <Compile Include="src\Libraries\External\Raya\Raya.cs" />
     <Compile Include="src\Libraries\External\TiledSharp\ImageLayer.cs" />
     <Compile Include="src\Libraries\External\TiledSharp\Layer.cs" />
     <Compile Include="src\Libraries\External\TiledSharp\Map.cs" />
@@ -230,6 +231,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="src\Libraries\External\Newtonsoft.Json.dll" />
+    <AdditionalFiles Include="src\Libraries\External\Raya\Raya.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AdditionalFiles>
+    <AdditionalFiles Include="src\Libraries\External\Raya\SDL2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AdditionalFiles>
     <Content Include="src\Libraries\External\SoulLib.dll" />
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +244,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>echo Copying RAYA files...
+xcopy /y /d  "$(ProjectDir)src\Libraries\External\Raya\*.dll" "$(ProjectDir)$(OutDir)"
+</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
