--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -33,7 +33,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;LINUX</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -57,107 +57,18 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>SoulEngine.Starter</StartupObject>
+    <StartupObject>Example.EntryPoint</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Engine\Core\AssetManager.cs" />
-    <Compile Include="src\Engine\Core\Assets.cs" />
-    <Compile Include="src\Engine\Core\Context.cs" />
-    <Compile Include="src\Engine\Core\Core.cs" />
-    <Compile Include="src\Engine\Core\Helpers\Enums.cs" />
-    <Compile Include="src\Engine\Core\Helpers\Functions.cs" />
-    <Compile Include="src\Engine\Core\SoundEngine.cs" />
-    <Compile Include="src\Engine\Core\Starter.cs" />
-    <Compile Include="src\Engine\Core\WindowManager.cs" />
-    <Compile Include="src\Engine\Debugging\DebugScene.cs" />
-    <Compile Include="src\Engine\Debugging\DebugSocket.cs" />
-    <Compile Include="src\Engine\Debugging\Logger.cs" />
-    <Compile Include="src\Engine\EventArgs\NetworkMessageEventArgs.cs" />
-    <Compile Include="src\Engine\EventArgs\NetworkEventArgs.cs" />
-    <Compile Include="src\Engine\EventArgs\MouseButtonEventArgs.cs" />
-    <Compile Include="src\Engine\EventArgs\MouseScrollEventArgs.cs" />
-    <Compile Include="src\Engine\EventArgs\MouseMoveEventArgs.cs" />
-    <Compile Include="src\Engine\EventArgs\KeyEventArgs.cs" />
-    <Compile Include="src\Engine\EventArgs\ScrollbarEventArgs.cs" />
-    <Compile Include="src\Engine\Objects\DrawComponent.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\DrawData.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\ColorText.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TextLine.cs" />
-    <Compile Include="src\Engine\Objects\Helpers\GameObject\SmoothStepData.cs" />
-    <Compile Include="src\Engine\Objects\UIComponents\Box.cs" />
-    <Compile Include="src\Engine\Objects\UIComponents\Button.cs" />
-    <Compile Include="src\Engine\Objects\UIObject.cs" />
-    <Compile Include="src\Libraries\External\Raya\Raya.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\ImageLayer.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\Layer.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\Map.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\ObjectGroup.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\TiledCore.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\Tileset.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\CRC32.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\Deflate.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\DeflateStream.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\GZipStream.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\Inflate.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\InfTree.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\ParallelDeflateOutputStream.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\Tree.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\Zlib.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibBaseStream.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibCodec.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibConstants.cs" />
-    <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibStream.cs" />
-    <Compile Include="src\Libraries\Input.cs" />
-    <Compile Include="src\Libraries\Scripting\LineScript.cs" />
-    <Compile Include="src\Libraries\Scripting\ScriptEngine.cs" />
-    <Compile Include="src\Libraries\Settings.cs" />
-    <Compile Include="src\Engine\Meta\Info.cs" />
-    <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
-    <Compile Include="src\Engine\Objects\Component.cs" />
-    <Compile Include="src\Engine\Objects\Components\Animation.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\CharData.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tag.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TagFactory.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\Border.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\TiledMap\TileData.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\TiledMap\TileObject.cs" />
-    <Compile Include="src\Engine\Objects\UIComponents\MouseInput.cs" />
-    <Compile Include="src\Engine\Objects\Components\TiledMap.cs" />
-    <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
-    <Compile Include="src\Engine\Objects\GameObject.cs" />
-    <Compile Include="src\Engine\Objects\Scene.cs" />
-    <Compile Include="src\Engine\Objects\Ticker.cs" />
-    <Compile Include="src\Engine\Objects\ViewObjects\Camera.cs" />
-    <Compile Include="src\Engine\Objects\ViewObjects\ScreenAdapter.cs" />
-    <Compile Include="src\Engine\Objects\ViewObjects\ViewObject.cs" />
-    <Compile Include="src\Libraries\SoulServer\Message.cs" />
-    <Compile Include="src\Libraries\SoulServer\Networking.cs" />
-    <Compile Include="src\User\Custom\Event Types.cs" />
-    <Compile Include="src\User\Custom\Text Tags.cs" />
-    <Compile Include="src\User\Scenes\ScenePrim.cs" />
-    <Compile Include="src\Engine\Objects\UIComponents\Scrollbar.cs" />
-    <Compile Include="src\User\Scenes\StressTest.cs" />
-    <Compile Include="src\User\Settings.cs" />
+    <Compile Include="src\Context\Context.cs" />
+    <Compile Include="src\Engine\Core.cs" />
+    <Compile Include="src\Libraries\Raya.cs" />
+    <Compile Include="src\Engine\SoulEngine.cs" />
+    <Compile Include="src\Test\EntryPoint.cs" />
+    <Compile Include="src\Context\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Esprima">
-      <HintPath>src\Libraries\External\Scripting\Esprima.dll</HintPath>
-    </Reference>
-    <Reference Include="jint">
-      <HintPath>src\Libraries\External\Scripting\jint.dll</HintPath>
-    </Reference>
-    <Reference Include="MonoGame.Framework">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>src\Libraries\External\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="SoulLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>src\Engine\Libraries\External\SoulLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -168,47 +79,47 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
       <Link>x86\SDL2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\SDL2.dll">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x64\SDL2.dll">
       <Link>x64\SDL2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\soft_oal.dll">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\soft_oal.dll">
       <Link>x86\soft_oal.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\soft_oal.dll">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x64\soft_oal.dll">
       <Link>x64\soft_oal.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libSDL2-2.0.so.0">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libSDL2-2.0.so.0">
       <Link>x86\libSDL2-2.0.so.0</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\libSDL2-2.0.so.0">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x64\libSDL2-2.0.so.0">
       <Link>x64\libSDL2-2.0.so.0</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libopenal.so.1">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libopenal.so.1">
       <Link>x86\libopenal.so.1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\libopenal.so.1">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x64\libopenal.so.1">
       <Link>x64\libopenal.so.1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\libSDL2-2.0.0.dylib">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\libSDL2-2.0.0.dylib">
       <Link>libSDL2-2.0.0.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\libopenal.1.dylib">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\libopenal.1.dylib">
       <Link>libopenal.1.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll.config">
+    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll.config">
       <Link>MonoGame.Framework.dll.config</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -230,23 +141,21 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="src\Libraries\External\Newtonsoft.Json.dll" />
-    <AdditionalFiles Include="src\Libraries\External\Raya\Raya.dll">
+    <AdditionalFiles Include="lib\Raya\Raya.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </AdditionalFiles>
-    <AdditionalFiles Include="src\Libraries\External\Raya\SDL2.dll">
+    <AdditionalFiles Include="lib\Raya\SDL2.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </AdditionalFiles>
-    <Content Include="src\Libraries\External\SoulLib.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\User\Custom\Tags\" />
+    <Folder Include="src\User\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
-    <PostBuildEvent>echo Copying RAYA files...
-xcopy /y /d  "$(ProjectDir)src\Libraries\External\Raya\*.dll" "$(ProjectDir)$(OutDir)"
+    <PostBuildEvent>echo Copying Raya libraries...
+xcopy /y /d  "$(ProjectDir)lib\Raya\*.dll" "$(ProjectDir)$(OutDir)"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
