--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -63,7 +63,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Context.cs" />
-    <Compile Include="src\Libraries\Raya.cs" />
     <Compile Include="src\Engine.cs" />
     <Compile Include="src\Test\EntryPoint.cs" />
     <Compile Include="src\Modules\Settings.cs" />
@@ -97,22 +96,15 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <AdditionalFiles Include="lib\Raya\Raya.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </AdditionalFiles>
-    <AdditionalFiles Include="lib\Raya\SDL2.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </AdditionalFiles>
-  </ItemGroup>
-  <ItemGroup>
+    <Folder Include="lib\" />
+    <Folder Include="src\Libraries\" />
     <Folder Include="src\User\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
-    <PostBuildEvent>echo Copying Raya libraries...
-xcopy /y /d  "$(ProjectDir)lib\Raya\*.dll" "$(ProjectDir)$(OutDir)"
-</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
