--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -215,6 +215,9 @@
     <None Include="Content\Font\Default.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="SoulEngine.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
