--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -62,6 +62,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Engine\Modules\AssetManager.cs" />
+    <Compile Include="src\Engine\Modules\InputModule.cs" />
+    <Compile Include="src\Engine\Modules\SceneManager.cs" />
     <Compile Include="src\Engine\Objects\Assets.cs" />
     <Compile Include="src\Engine\Core\Context.cs" />
     <Compile Include="src\Engine\Core\Core.cs" />
@@ -70,6 +72,7 @@
     <Compile Include="src\Engine\Modules\Interfaces\IModuleComposable.cs" />
     <Compile Include="src\Engine\Modules\Interfaces\IModuleDrawable.cs" />
     <Compile Include="src\Engine\Modules\TimingManager.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\onClick.cs" />
     <Compile Include="src\Libraries\Functions.cs" />
     <Compile Include="src\Engine\Core\SoundEngine.cs" />
     <Compile Include="src\Engine\Core\Starter.cs" />
@@ -90,7 +93,6 @@
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\DrawData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\ColorText.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TextLine.cs" />
-    <Compile Include="src\Engine\Objects\Helpers\GameObject\SmoothStepData.cs" />
     <Compile Include="src\Engine\Objects\UIComponents\Box.cs" />
     <Compile Include="src\Engine\Objects\UIComponents\Button.cs" />
     <Compile Include="src\Engine\Objects\UIObject.cs" />
@@ -113,7 +115,6 @@
     <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibCodec.cs" />
     <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="src\Libraries\External\TiledSharp\zlib\ZlibStream.cs" />
-    <Compile Include="src\Libraries\Input.cs" />
     <Compile Include="src\Libraries\Scripting\LineScript.cs" />
     <Compile Include="src\Engine\Modules\ScriptEngine.cs" />
     <Compile Include="src\Libraries\Settings.cs" />
@@ -137,13 +138,14 @@
     <Compile Include="src\Engine\Objects\ViewObjects\ScreenAdapter.cs" />
     <Compile Include="src\Engine\Objects\ViewObjects\ViewObject.cs" />
     <Compile Include="src\Libraries\SoulServer\Message.cs" />
-    <Compile Include="src\Libraries\SoulServer\Networking.cs" />
+    <Compile Include="src\Engine\Modules\Networking.cs" />
     <Compile Include="src\Scenes\Loading.cs" />
     <Compile Include="src\User\Custom\Event Types.cs" />
     <Compile Include="src\User\Custom\Text Tags.cs" />
     <Compile Include="src\User\Scenes\ScenePrim.cs" />
     <Compile Include="src\Engine\Objects\UIComponents\Scrollbar.cs" />
     <Compile Include="src\User\Scenes\StressTest.cs" />
+    <Compile Include="src\User\Scenes\test1.cs" />
     <Compile Include="src\User\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
