--- a/SoulEngineBuildHelper/SoulEngineBuildHelper.csproj
+++ b/SoulEngineBuildHelper/SoulEngineBuildHelper.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{972939F6-479D-48E9-A6BB-E9B90CF0664A}</ProjectGuid>
+    <ProjectGuid>{B6B9DB66-FB7D-45E0-8395-A428ADC8BAF5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Example</RootNamespace>
-    <AssemblyName>Example</AssemblyName>
+    <RootNamespace>Soul.Engine.BuildHelper</RootNamespace>
+    <AssemblyName>SoulEngineBuildHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,17 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Meta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SoulEngine\SoulEngine.csproj">
-      <Project>{edbe1f02-0b03-4990-8811-aecaa30b4470}</Project>
-      <Name>SoulEngine</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
