Major Refactoring - Development 2018

--- a/SoulEngine/SoulEngine.csproj
+++ b/SoulEngine/SoulEngine.csproj
@@ -67,22 +67,21 @@
     <Compile Include="Engine\AssetManager\Assets.cs" />
     <Compile Include="Engine\Context.cs" />
     <Compile Include="Engine\ECS\Actor.cs" />
-    <Compile Include="Engine\ECS\ActorObject.cs" />
     <Compile Include="Engine\Enums\DebugMessageSource.cs" />
     <Compile Include="Engine\Enums\ShapeType.cs" />
     <Compile Include="Engine\Internal\AsyncScript.cs" />
     <Compile Include="Engine\Meta.cs" />
     <Compile Include="Engine\GameObject.cs" />
-    <Compile Include="Engine\Modules\ScriptModule.cs" />
+    <Compile Include="Engine\Modules\SceneManager.cs" />
+    <Compile Include="Engine\Modules\ScriptEngine.cs" />
     <Compile Include="Engine\Objects\BasicShape.cs" />
     <Compile Include="Engine\Objects\Texture.cs" />
     <Compile Include="Engine\Scene.cs" />
     <Compile Include="Engine\SceneLoadArgs.cs" />
     <Compile Include="Engine\Scenes\Loading.cs" />
-    <Compile Include="Engine\Globals.cs" />
     <Compile Include="Engine\Error.cs" />
     <Compile Include="Engine\Functions.cs" />
-    <Compile Include="Engine\Modules\DebugModule.cs" />
+    <Compile Include="Engine\Modules\Debugger.cs" />
     <Compile Include="Examples\Basic\ShapeTest.cs" />
     <Compile Include="Examples\ESScript\ElectricSleepViewer.cs" />
     <None Include="Examples\ESScript\ESScriptTree.cs" />
