--- a/BuildHelper/BuildHelper.csproj
+++ b/BuildHelper/BuildHelper.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{B6B9DB66-FB7D-45E0-8395-A428ADC8BAF5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Soul.Engine.BuildHelper</RootNamespace>
-    <AssemblyName>SoulEngineBuildHelper</AssemblyName>
+    <AssemblyName>BuildHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
