--- a/SoulEngine/SoulEngine.csproj
+++ b/SoulEngine/SoulEngine.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EDBE1F02-0B03-4990-8811-AECAA30B4470}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Soul</RootNamespace>
     <AssemblyName>SoulEngine</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
@@ -32,7 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Soul.Examples.Basic.PhysicsTest</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>SoulEngine2018.ico</ApplicationIcon>
@@ -129,12 +130,6 @@
     <Compile Include="Engine\Functions.cs" />
     <Compile Include="Engine\Modules\Debugger.cs" />
     <Compile Include="Engine\Settings.cs" />
-    <Compile Include="Examples\Basic\PhysicsTest.cs" />
-    <Compile Include="Examples\Basic\ShapeTest.cs" />
-    <Compile Include="Examples\ESScript\ElectricSleepViewer.cs" />
-    <None Include="Examples\ESScript\ESScriptTree.cs" />
-    <Compile Include="Examples\ESScript\NodeLink.cs" />
-    <Compile Include="Examples\ESScript\ScriptNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -144,8 +139,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Examples\Basic\About.txt" />
-    <Content Include="Examples\ESScript\About.txt" />
     <Content Include="SoulEngine2018.ico" />
   </ItemGroup>
   <ItemGroup />
@@ -155,6 +148,6 @@
     </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)SoulEngineBuildHelper\bin\$(Configuration)\SoulEngineBuildHelper.exe" "$(ProjectDir)\" "$(TargetDir)\"</PreBuildEvent>
+    <PreBuildEvent>"$(SolutionDir)BuildHelper\bin\$(Configuration)\BuildHelper.exe" "$(ProjectDir)\" "$(TargetDir)\"</PreBuildEvent>
   </PropertyGroup>
 </Project>
